# meaty-midi-programmer

./: CMakeLists.txt  LICENSE  README.md  pyproject.toml
include/: midi_editor.hpp
src/: main.cpp  midi_editor.cpp
src/meaty_midi_programmer/: dial.py  main.py
